fix: .listDiv div h4 margin, text-align and flex-grow

--- a/styles/preview.css
+++ b/styles/preview.css
@@ -74,7 +74,12 @@ header {
 .listDiv div h4, .listDiv div h1 {
     font-weight: bold;
     font-size: 25px;
-    text-transform: uppercase;
+    text-transform: uppercase; 
+}
+
+.listDiv div h4 {
+    margin: 0 15px;
+    text-align: center;
     flex-grow: 1;
 }
 
